[gd_scene load_steps=6 format=3 uid="uid://bcxyhhltrvjs1"]

[ext_resource type="Script" uid="uid://ceo67qquigkua" path="res://scenes/ui_hud/goal_ui.gd" id="1_fne2u"]
[ext_resource type="Texture2D" uid="uid://bktah0yavmtag" path="res://scenes/levels/art/test_tiles.png" id="1_rmify"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rmify"]
atlas = ExtResource("1_rmify")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fne2u"]
atlas = ExtResource("1_rmify")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2aw8"]
atlas = ExtResource("1_rmify")
region = Rect2(96, 128, 32, 32)

[node name="Goal_UI" type="CanvasLayer"]
script = ExtResource("1_fne2u")

[node name="Icons" type="Control" parent="."]
modulate = Color(0.3459457, 0.34594572, 0.3459457, 1)
custom_minimum_size = Vector2(0, -32)
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -40.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0

[node name="BrownArtifact" type="TextureRect" parent="Icons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_rmify")

[node name="BlueArtifact" type="TextureRect" parent="Icons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_fne2u")

[node name="WhiteArtifact" type="TextureRect" parent="Icons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_b2aw8")
